@@ -5,6 +5,7 @@ DarkRP 2.4.1 SVN
 [FIX] // not working in letters
 [FIX] Disabling RP names not working clientside
 [FIX] Weapon checker resetting ammo
+[FIX] Gunlicense buttons in F4
 [REMOVE] ALL NWVars in doors, players and custom entities (shipments, druglabs etc.) DarkRP now has LESS NWVars than sandbox!
 
 DarkRP 2.4.1
